css/impressum.css
.impressum-header {
  display: flex;
  justify-content: end;
  height: 740px;
  -webkit-text-stroke: 3px var(--main-green);
  writing-mode: vertical-rl;
  transform: rotate(180deg);
  font-size: 58px;
  margin-left: 64px;
}

.impressumsite-text {
  margin-left: 32px;
  height: 740px;
  width: 650px;
  color: white;
}

.impressumsite-text h2 {
  font-size: 18px;
  padding-bottom: 8px;
  color: var(--main-green);
}

.impressumsite-text p {
  padding-bottom: 16px;
}

.impressum-detail {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-right: 16px;
  height: 740px;
}

.copy-right {
  text-align: end;
}

.margin-imprssum-unset {
  margin: unset;
}

.arrow-impressum {
  position: absolute;
  bottom: 50%;
  right: 132px;
}

html {
  scroll-behavior: smooth;
}

.impressum-container {
  display: flex;
  margin-left: 172px;

  width: calc(100vw - 172px);
  height: 100vh;

}

.impressum-content {
  display: flex;
  width: 100%;
  height: 100vh;
  align-items: center;
  overflow-x: auto;
  overflow-y: hidden;

  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;

  scrollbar-width: none;


}

.impressum-background {
    background: linear-gradient(
    to right,
    #000000 0%,
    #2c2b2b 35%,
    #0b0a0a 70%,
    #000000 100%
  );
}

.impressum-content::-webkit-scrollbar {
  display: none;
}

.impressum-content-section {
  position: relative;

  flex: 0 0 100%;
  width: 100%;

  display: flex;
  flex-direction: row;
  align-items: center;

  scroll-snap-align: start;
}

.arrow-impressum-next {
  position: absolute;
  right: 220px;
  top: 50%;
}

.arrow-impressum-prev {
  position: absolute;

  left: 50px;
  top: 50%;

  transform: translateY(-50%);
}

.footer-space {
  flex: 1;
}

.impressumsite-text ul {
    padding: revert;
}

.margin-impressumsite-text {
    margin-left: 200px
}

